// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TraceTree eap trace assembles tree from eap trace 1`] = `
"
eap trace root
  span.op - span.description
    span.op - span.description
"
`;

exports[`TraceTree eap trace assembles tree from eap trace with only errors 1`] = `
"
eap trace root
  eap-error-1
  eap-error-2
"
`;

exports[`TraceTree eap trace correctly renders eap-transactions toggle state 1`] = `
"
eap trace root
  span.op - span.description (eap-transaction)
    span.op - span.description (eap-transaction)
      span.op - span.description (eap-transaction)
"
`;

exports[`TraceTree eap trace correctly renders eap-transactions toggle state 2`] = `
"
eap trace root
  span.op - span.description (eap-transaction)
    span.op - span.description
      span.op - span.description (eap-transaction)
        span.op - span.description (eap-transaction)
"
`;

exports[`TraceTree eap trace correctly renders eap-transactions toggle state 3`] = `
"
eap trace root
  span.op - span.description (eap-transaction)
    span.op - span.description (eap-transaction)
      span.op - span.description (eap-transaction)
"
`;
